tests/fixtures/valid/expressions/function_oneline.pine
//@version=6
indicator("Func")
f(x) => x + 1
y = f(close)
plot(y)
