tests/fixtures/invalid/semantic/break_outside_loop.pine
//@version=6
indicator("x")
break
